@@ -1,10 +1,11 @@
 0.74-2
 A maintenance release for DOSBox 0.74, which solves the following problems:
 
-- Windows: Fix auto/max cycles algorithm on Windows 7, which helps with stuttering audio.
+- Windows: Fix auto/max cycles algorithm on Windows 7, which helps with 
+           stuttering audio.
 - Mac OS X: Bring a 64 bit version and improve performance.
-- Linux: Fix the 64bit dynrec cpu core and a lot of compilation problems. Add patches for
-         the WINE Team.
+- Linux: Fix the 64bit dynrec cpu core and a lot of compilation problems. 
+         Add patches for the WINE Team.
 
 The game compatibility should be identical to 0.74.
 See the Changelog for a full list of changes.
